# PaySentinelIQ

./: .gitignore  DPIA_REPORT.md  LGPD_COMPLIANCE_REPORT.md  README.md  main.py  pyrightconfig.json  railway.toml
Back-end/: .dockerignore  .env.example  .pre-commit-config.yaml  alembic.ini  pyproject.toml  railway.toml
Back-end/app/: __init__.py  main.py  run.py
Back-end/app/account/: __init__.py
Back-end/app/account/presentation/: __init__.py  router.py
Back-end/app/ai_agents/: __init__.py  agent_prompts.py  crew.py  llm_service.py  orchestrator.py
Back-end/app/ai_agents/agents/: __init__.py
Back-end/app/ai_agents/tools/: __init__.py  boleto_tools.py  brazil_financial_tools.py  custom_tools.py  knowledge_tool.py  pdf_forensic_tools.py
Back-end/app/ai_assistant/: __init__.py
Back-end/app/ai_assistant/presentation/: __init__.py  router.py
Back-end/app/alembic/: env.py
Back-end/app/alembic/versions/: 0001_initial_schema.py  0002_data_breaches.py  0003_analysis_records.py  __init__.py
Back-end/app/analytics/: __init__.py
Back-end/app/analytics/application/: analysis_history_router.py  router.py
Back-end/app/api/: __init__.py
Back-end/app/api/documents/: __init__.py  router.py
Back-end/app/audit/: __init__.py
Back-end/app/auth/: __init__.py  dependencies.py  domain.py  repository.py  services.py
Back-end/app/breach_notification/: __init__.py
Back-end/app/compliance/: __init__.py
Back-end/app/core/: __init__.py
Back-end/app/employees/: __init__.py
Back-end/app/events/: __init__.py  event_bus.py
Back-end/app/fraud_detection/: __init__.py
Back-end/app/knowledge/: __init__.py  chunker.py  embedder.py  exceptions.py  ingest_knowledge.py  knowledge_registry.py  metadata.py  models.py  retriever.py  settings.py  vector_store.py
Back-end/app/notifications/: __init__.py  services.py
Back-end/app/observability/: __init__.py  correlation.py  health.py  logging.py  metrics.py  rate_limit.py  security.py
Back-end/app/payroll/: __init__.py
Back-end/app/providers/: __init__.py  base.py  factory.py  gemini.py  ollama.py  openai.py
Back-end/app/reports/: __init__.py
Back-end/app/services/: pipeline_service.py
Back-end/app/settings_module/: __init__.py
Back-end/app/shared/: __init__.py  aws_cloudwatch.py  aws_lambda.py  aws_s3.py  aws_sqs.py  base_model.py  database.py  debug_router.py  domain_primitives.py  exceptions.py  middleware.py  orm_models.py  rate_limiter.py  redis_client.py  repository.py  sentry.py  settings.py
Back-end/app/tasks/: __init__.py  ai_tasks.py  breach_tasks.py  compliance_tasks.py  document_tasks.py  notification_tasks.py  ocr_tasks.py  payment_reminder_tasks.py  payroll_tasks.py  retention_tasks.py
Back-end/app/verification/: __init__.py
Back-end/app/websocket/: __init__.py  router.py
Back-end/docker/: Dockerfile  docker-compose.yml  docker_config.py
Back-end/docs/: tesseract_setup.md
Back-end/tests/: conftest.py  debug_fraudulent_boleto.py  golden_dataset_runner.py
Back-end/tests/integration/: test_repositories.py
Back-end/tests/manual/: test_sentry_e2e.py
Back-end/tests/services/: test_enrichment.py
Back-end/tests/unit/: test_architecture_hardening.py  test_benchmark.py  test_boleto_tools.py  test_brazil_financial_tools.py  test_contracts.py  test_crewai_integration.py  test_domain.py  test_fase3a_production.py  test_fase3b_scoring.py  test_fase4_production.py  test_fraud_detection_gap.py  test_fraud_structured_only.py  test_golden_dataset.py  test_knowledge.py  test_pdf_forensic_tools.py  test_pipeline.py  test_pipeline_hardening.py  test_production_readiness.py  test_rag_integration.py  test_websocket.py
Front-end/: next.config.ts  (+5 more)
(+246 files in other folders)
