[project]
name = "pay-sentinel-iq"
version = "1.0.0"
description = "AI-Powered Payroll Verification & Fraud Risk Intelligence Platform"
requires-python = ">=3.11"
authors = [{ name = "PaySentinelIQ Engineering" }]
readme = "README.md"
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "redis>=5.1.0",
    "celery[redis]>=5.4.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "httpx>=0.28.0",
    "boto3>=1.35.0",
    "langchain>=0.3.0",
    "langchain-ollama>=0.1.0",
    "langchain-community>=0.3.0",
    "crewai>=0.70.0",
    "tenacity>=9.0.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "sentry-sdk[fastapi]>=2.16.0",
    "websockets>=13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "factory-boy>=3.3.0",
    "faker>=29.0.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.28.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
