[project]
name = "pay-sentinel-iq"
version = "1.0.0"
description = "AI-powered payroll verification & fraud intelligence platform"
readme = "../README.md"
requires-python = ">=3.11,<3.12"

authors = [
    {name = "PaySentinelIQ Engineering"}
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "redis>=5.1.0",
    "celery[redis]>=5.4.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "httpx>=0.28.0",
    "boto3>=1.35.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.1.0",
    "crewai>=0.70.0",
    "tenacity>=9.0.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "sentry-sdk[fastapi]>=2.16.0",
    "websockets>=13.0",
    "orjson>=3.10.0",
    "pyotp>=2.9.0",
    "email-validator>=2.2.0"
]


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"
mypy = "^1.11.0"
pre-commit = "^3.8.0"
pytest = "^9.0.3"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.0.0"
httpx = "^0.28.0"


[tool.poetry]
package-mode = false

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "N", "I"]

[tool.ruff.lint.per-file-ignores]
# FastAPI intentionally uses Depends()/File() in signatures
"**/router.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
explicit_package_bases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    # Suppress third-party deprecation warnings (sentry-sdk, langchain)
    "ignore:The `enable_tracing` parameter is deprecated:DeprecationWarning",
    "ignore:.*langchain-community.*is being sunset.*:DeprecationWarning",
    "ignore:The `description` parameter is deprecated:DeprecationWarning",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"